--- a/simple/src/main/res/layout/layout_movie_item.xml
+++ b/simple/src/main/res/layout/layout_movie_item.xml
@@ -6,13 +6,13 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/ItemImage"
+        android:id="@+id/image"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:contentDescription="@null" />
 
     <TextView
-        android:id="@+id/ItemText"
+        android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView01" />
