--- a/simple/src/main/res/layout/layout_movie_list.xml
+++ b/simple/src/main/res/layout/layout_movie_list.xml
@@ -2,6 +2,7 @@
 <GridView xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:id="@+id/gridview"
+    android:background="@android:color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:numColumns="auto_fit"
