--- a/simple/src/main/res/values/styles.xml
+++ b/simple/src/main/res/values/styles.xml
@@ -1,8 +1,23 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <style name="AppTheme" parent="@android:style/Theme.NoTitleBar">
+        <item name="android:fadingEdgeLength">0dp</item>
+        <item name="android:autoLink">web</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowIsTranslucent">true</item>
+    </style>
+
+    <style name="ActivityAnimationStyle">
+        <item name="@android:activityOpenEnterAnimation">@anim/slide_in_left</item>
+        <item name="@android:activityOpenExitAnimation">@anim/slide_out_left</item>
+        <item name="@android:activityCloseEnterAnimation">@anim/slide_in_right</item>
+        <item name="@android:activityCloseExitAnimation">@anim/slide_out_right</item>
+    </style>
+
+    <style name="ActivityWindowStyle" parent="@android:style/Theme.NoTitleBar">
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowAnimationStyle">@style/ActivityAnimationStyle</item>
+        <item name="android:screenOrientation">portrait</item>
     </style>
 
 </resources>
