--- a/simple/src/main/res/layout/layout_movie_list.xml
+++ b/simple/src/main/res/layout/layout_movie_list.xml
@@ -5,9 +5,7 @@
     android:background="@android:color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:numColumns="auto_fit"
+    android:numColumns="3"
     android:verticalSpacing="10dp"
     android:horizontalSpacing="10dp"
-    android:columnWidth="90dp"
-    android:stretchMode="columnWidth"
     android:gravity="center" />
