--- a/simple/src/main/res/values/styles.xml
+++ b/simple/src/main/res/values/styles.xml
@@ -5,12 +5,13 @@
         <item name="android:autoLink">web</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowAnimationStyle">@style/ActivityWindowStyle</item>
     </style>
 
     <style name="ActivityAnimationStyle">
-        <item name="@android:activityOpenEnterAnimation">@anim/slide_in_left</item>
+        <item name="@android:activityOpenEnterAnimation">@anim/slide_in_right</item>
         <item name="@android:activityOpenExitAnimation">@anim/slide_out_left</item>
-        <item name="@android:activityCloseEnterAnimation">@anim/slide_in_right</item>
+        <item name="@android:activityCloseEnterAnimation">@anim/slide_in_left</item>
         <item name="@android:activityCloseExitAnimation">@anim/slide_out_right</item>
     </style>
 
