adjust location libraries

--- a/simple/src/main/res/layout/layout_redirect.xml
+++ b/simple/src/main/res/layout/layout_redirect.xml
@@ -5,6 +5,7 @@
               android:gravity="center"
         >
     <TextView
+            android:id="@+id/imei"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="This is Redirect Page"
