--- a/simple/src/main/res/values/styles.xml
+++ b/simple/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <style name="AppTheme" parent="@android:style/Theme.NoTitleBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:fadingEdgeLength">0dp</item>
         <item name="android:autoLink">web</item>
         <item name="android:windowContentOverlay">@null</item>
