--- a/simple/src/main/res/layout/layout_movie_item.xml
+++ b/simple/src/main/res/layout/layout_movie_item.xml
@@ -5,10 +5,10 @@
               android:gravity="center_horizontal"
               android:orientation="vertical">
 
-    <ImageView
+    <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/image"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
+            android:layout_height="80dp"
+            android:layout_width="60dp"
             android:contentDescription="@null"/>
 
     <TextView
