improve framework executor

--- a/simple/src/main/res/layout/layout_movie_detail.xml
+++ b/simple/src/main/res/layout/layout_movie_detail.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:gravity="center"
-        >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:gravity="center">
+
     <TextView
-            android:id="@+id/imei"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="This is Redirect Page"
-            android:textSize="24sp"/>
+        android:id="@+id/imei"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="This is Redirect Page"
+        android:textSize="24sp" />
+
+    <com.facebook.drawee.view.SimpleDraweeView
+        android:id="@+id/sdv"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:background="@android:color/black"
+        app:actualImageScaleType="fitCenter"/>
 </LinearLayout>
