fix exception when onTrimMemory.

--- a/simple/src/main/res/layout/layout_movie_detail.xml
+++ b/simple/src/main/res/layout/layout_movie_detail.xml
@@ -16,7 +16,7 @@
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/sdv"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
+        android:layout_height="match_parent"
         android:background="@android:color/black"
         app:actualImageScaleType="fitCenter"/>
 </LinearLayout>
